+ Start of Changelog with Version 1.2