@@ -1,1 +1,2 @@
++ Removed LGPL headers to release it without copy-left
 + Start of Changelog with Version 1.2
